# sollertia-experiment

./: .gitignore  CLAUDE.md  LICENSE  README.md  live.py  pyproject.toml  query_mesoscope_state.py  tox.ini
assets/mesoscope_vr/: README.md  runAcquisition.m  setupAcquisition.m
docs/source/: api.rst  conf.py  welcome.rst
envs/: sle_dev_lin.yml  sle_dev_lin_spec.txt
src/sl_experiment/command_line_interfaces/: configure.py  entry_points.py  get.py  manage.py  mcp_servers.py
src/sl_experiment/mesoscope_vr/: __init__.py  binding_classes.py  binding_classes.pyi  configuration.py  data_acquisition.py  data_acquisition.pyi  data_preprocessing.py  data_preprocessing.pyi  tools.py  tools.pyi
src/sl_experiment/shared_components/: google_sheet_tools.py  module_interfaces.py  shared_assets.py  shared_assets.pyi
src/sollertia_experiment/: __init__.py
src/sollertia_experiment/command_line_interfaces/: configure.py  entry_points.py  execute.py  get.py  manage.py  mcp_servers.py
src/sollertia_experiment/cross_system/: __init__.py  __init__.pyi  data_preprocessing.py  data_preprocessing.pyi  google_sheet_tools.py  google_sheet_tools.pyi  module_interfaces.py  module_interfaces.pyi  project_tools.py  project_tools.pyi  system_configuration.py  system_configuration.pyi  terminal_prompts.py  zaber_bindings.py  zaber_bindings.pyi
src/sollertia_experiment/interfaces/: __init__.py  entry_points.py  entry_points.pyi  get.py  get.pyi  get_tools.py  get_tools.pyi  mcp_instance.py  mcp_instance.pyi  mcp_server.py  mesoscope_vr.py  mesoscope_vr.pyi  mesoscope_vr_tools.py  mesoscope_vr_tools.pyi
src/sollertia_experiment/mesoscope_vr/: __init__.py  __init__.pyi  acquisition_components.py  acquisition_components.pyi  binding_classes.py  binding_classes.pyi  configuration.py  data_acquisition.py  data_acquisition.pyi  data_preprocessing.py  data_preprocessing.pyi  maintenance_ui.py  maintenance_ui.pyi  mesoscope_driver.py  positions.py  runtime_ui.py  runtime_ui.pyi  system.py  system.pyi  system_controller.py  system_controller.pyi  tools.py  visualizer.py  visualizer.pyi  visualizers.py  zaber_bindings.py
src/sollertia_experiment/shared_components/: __init__.py  google_sheet_tools.py  module_interfaces.py  shared_assets.py  zaber_bindings.py
src/sollertia_experiment/vr_task/: __init__.py  __init__.pyi  bridge.py  configuration.py  configuration.pyi  driver.py  driver.pyi  events.py  logging_hooks.py  mqtt_topics.py  state.py  template_loader.py  trial_decomposition.py  trial_decomposition.pyi
