# Defines the build system used for the project.
[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"

# Project metadata section. Provides the general ID information about the project.
[project]
name = "sollertia-experiment"
version = "5.0.0"
description = "Provides data acquisition and preprocessing runtimes for Sollertia platform data acquisition systems."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14,<3.15"
authors = [
    { name = "Ivan Kondratyev" },
    { name = "Kushaan Gupta" },
    { name = "Natalie Yeung" },
    { name = "Katlynn Ryu" },
    { name = "Jasmine Si" },
]
maintainers = [
    { name = "Ivan Kondratyev", email = "ik278@cornell.edu" },
]

keywords = ["sollertia", "ataraxis", "data-acquisition", "mesoscope", "experiment"]

classifiers = [
    # Development status
    "Development Status :: 5 - Production/Stable",
    # Intended audience and project topic
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    # Supported Python Versions
    "Programming Language :: Python :: 3.14",
    # Supported Operating Systems
    "Operating System :: POSIX :: Linux",
    # Typing
    "Typing :: Typed",
]

# Runtime project dependencies.
dependencies = [
    # Ataraxis Libraries
    "ataraxis-time==6.0.1",
    "ataraxis-base-utilities==6.0.0",
    "ataraxis-data-structures==6.0.0",
    "ataraxis-transport-layer-pc==4.0.0",
    "ataraxis-communication-interface==5.0.0",
    "ataraxis-video-system==3.0.0",

    # Sollertia Libraries
    "sollertia-shared-assets==8.1.0",

    # Hardware Control
    "zaber-motion==9.3.1",

    # Scientific Computing
    "numpy==2.4.6",
    "numba==0.65.1",
    "scipy==1.17.1",
    "matplotlib==3.10.9",

    # Imaging
    "tifffile==2026.6.1",
    # Required by tifffile to (de)compress LERC-encoded TIFFs.
    "imagecodecs==2026.6.6",

    # GUI
    "pyside6==6.11.1",

    # Google Sheets API
    "google-api-python-client==2.197.0",
    "google-auth==2.53.0",

    # CLI and Utilities
    "click==8.4.1",
    "questionary==2.1.1",
    "crc==7.1.0",
    "tabulate2==1.10.2",
    "tqdm==4.68.1",
    "natsort-rs==0.1.22",
    "pyyaml==6.0.3",

    # MCP and HTTP
    "mcp>=1,<2",
    # Pinned to pre-1.0 to avoid an MCP-side crash with httpx beta releases.
    "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/Sun-Lab-NBB/sollertia-experiment"
Documentation = "https://sollertia-experiment-api-docs.netlify.app/"

# Currently, the library is interfaced with through the consolidated 'sle' CLI exposed below.
[project.scripts]
sle = "sollertia_experiment.interfaces.entry_points:sle_cli"

# Development dependencies (PEP 735). Not published to PyPI.
[dependency-groups]
dev = [
    # Tox
    "tox>=4,<5",
    "uv>=0,<1",
    "tox-uv>=1,<2",

    # Development Automation
    "ataraxis-automation>=8,<9",

    # Type stubs
    "google-api-python-client-stubs>=1,<2",
    "scipy-stubs>=1,<2",
    "types-tabulate>=0,<1",
    "types-tqdm>=4,<5",
]

# Specifies files that should not be included in the source-code distribution but are also not part of gitignore.
[tool.hatch.build.targets.sdist]
exclude = [".github", "recipe"]

# Specifies the library structure.
[tool.hatch.build.targets.wheel]
packages = ["src/sollertia_experiment"]

# Ruff Configuration.
[tool.ruff]
line-length = 120         # The maximum column length is set to 120 for this project.
indent-width = 4          # Same as black, indents are 4 spaces
target-version = "py314"  # Targets the lowest supported version of python
src = ["src"]             # The name of the source directory

# Excludes 'service' .py files, such as the sphinx configuration file, from linting.
extend-exclude = ["conf.py"]

# Checks for all potential violations and uses the exclusions below to target-disable specific ones.
lint.select = ["ALL"]

# General ignore directives
lint.ignore = [
    "W291",    # Conflicts with docstring formatting
    "W293",    # Conflicts with UI style formatting
    "BLE001",  # Catching blind exceptions is necessary for the functioning of this library
    "T201",    # Print is necessary to work with some external formatters used in this library
    "ANN401",  # While suboptimal, ANY is a helpful type when used with caution
    "C901",    # Sometimes complex functions are necessary
    "PLR0913", # Sometimes complex functions are necessary
    "PLR0912", # Sometimes complex functions are necessary
    "PLR0915", # Sometimes complex type definitions are necessary
    "PLR0911", # Sometimes complex return graphs are necessary
    "TID252",  # Conflicts with the project's import management strategy
    "COM812",  # Conflicts with the formatter
    "ISC001",  # Conflicts with the formatter
    "PT001",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-182590771
    "PT023",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "D107",    # __init__ is documented inside the main class docstring where applicable
    "D205",    # Bugs out for file descriptions
    "PLW0603", # While global statement usage is not ideal, it streamlines certain development patterns
]

# Additional formatting configurations
[tool.ruff.format]
quote-style = "double"             # Uses double quotes for strings
indent-style = "space"             # Uses space for indents
skip-magic-trailing-comma = false  # Like black, ignores trailing commas
line-ending = "auto"               # Automatically detects and standardizes line-ending character

# Docstrings and comments' line length
[tool.ruff.lint.pycodestyle]
max-doc-length = 120  # Maximum documentation line length, the same as code

# Docstrings style
[tool.ruff.lint.pydocstyle]
convention = "google"

# Additional, file-specific 'ignore' directives
[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
]

[tool.ruff.lint.isort]
case-sensitive = true              # Takes case into account when sorting imports
combine-as-imports = true          # Combines multiple "as" imports for the same package
force-wrap-aliases = true          # Wraps "as" imports so that each uses a separate line (after combining for package)
force-sort-within-sections = true  # Forces "as" and "from" imports for the same package to be close
length-sort = true                 # Places shorter imports first

# MyPy configuration section.
[tool.mypy]
# Strict mode settings (equivalent to --strict)
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

# Extra checks (equivalent to --extra-checks)
extra_checks = true

# Pretty output (equivalent to --pretty)
pretty = true

exclude = [
    "sollertia-experiment-\\d+", # Ignores the temporary directory created by setuptools when building the sdist
    "venv.*/",                   # Ignores virtual environments
    "build/",                    # Ignores the sdist directory
    "dist/",                     # Ignores the wheel directory
    "docs/",                     # Ignores the sphinx / doxygen directory
    "stubs/",                    # Ignores stubs directory (stubgen output target)
    "recipe/",                   # Ignores recipe directory (grayskull output target)
    "tests/",                    # Ignores the test directory
]
